<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/dimen20"
        android:layout_margin="@dimen/dimen40"
        app:cardBackgroundColor="?attr/background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/cross"
                android:layout_width="@dimen/dimen20"
                android:layout_height="@dimen/dimen20"
                android:layout_marginTop="@dimen/dimen20"
                android:layout_marginEnd="@dimen/dimen20"
                android:src="@drawable/close"
                android:layout_alignParentEnd="true"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/cross">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="@dimen/dimen100"
                    android:layout_height="@dimen/dimen100"
                    android:background="@drawable/btn_kuy"
                    android:src="@drawable/mapnesia"
                    android:layout_gravity="center"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/dimen10"
                    android:fontFamily="@font/montserrat"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="@dimen/dimensp24"
                    android:text="@string/app_name"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:textColor="?attr/colorOnBackground"
                    android:text="@string/version"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen10"
                    android:fontFamily="@font/montserrat"
                    android:textColor="?attr/colorOnBackground"
                    android:gravity="center"
                    android:text="@string/created_by"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="@dimen/dimen30"
                    android:fontFamily="@font/montserrat"
                    android:textColor="?attr/colorOnBackground"
                    android:textSize="@dimen/dimensp18"
                    android:text="@string/name"/>

            </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>